apps/home/game/ts3server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ts3server-filetransfer-tcp
  namespace: game
spec:
  entryPoints:
    - ts3-filetransfer
  routes:
    - match: HostSNI(`*`)
      services:
        - name: ts3server-service
          port: 30033
